k8s/deployment.yaml
---
  apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: galaxy-rakip-trial
    namespace: galaxy-d4science
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          app: galaxy-rakip-trial
      spec:
        containers:
        - name: galaxy
          image: enolfc/galaxy-stable:v0.8.3
          ports:
          - containerPort: 80
          resources:
            limits:
              memory: 3000M
            requests:
              cpu: 200m
              memory: 2000M
          volumeMounts:
          - name: persistent-exports 
            mountPath: "/exports"
          - name: admin-token 
            mountPath: "/etc/d4science/admin-token"
        volumes:
        - name: persistent-exports 
          persistentVolumeClaim:
            claimName: exports-rakip-trial
        - name: admin-token
          secret:
            secretName: admin-token-rakip-trial
